--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -264,14 +264,12 @@
     <Compile Include="Forms Modules\frmsInventario\frmAgregarProducto.vb">
       <SubType>Form</SubType>
     </Compile>
-
     <Compile Include="Forms Modules\frmsTickets\frmCrearTickets.Designer.vb">
       <DependentUpon>frmCrearTickets.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms Modules\frmsTickets\frmCrearTickets.vb">
       <SubType>Form</SubType>
     </Compile>
-
     <Compile Include="Forms Modules\frmsTickets\frmDetalleTicket.Designer.vb">
       <DependentUpon>frmDetalleTicket.vb</DependentUpon>
     </Compile>
@@ -392,11 +390,9 @@
     <EmbeddedResource Include="Forms Modules\frmsInventario\frmAgregarProducto.resx">
       <DependentUpon>frmAgregarProducto.vb</DependentUpon>
     </EmbeddedResource>
-
     <EmbeddedResource Include="Forms Modules\frmsTickets\frmCrearTickets.resx">
       <DependentUpon>frmCrearTickets.vb</DependentUpon>
     </EmbeddedResource>
-
     <EmbeddedResource Include="Forms Modules\frmsTickets\frmDetalleTicket.resx">
       <DependentUpon>frmDetalleTicket.vb</DependentUpon>
     </EmbeddedResource>
@@ -445,6 +441,7 @@
     <Content Include="Database Scripts\Database Script\Script DB_DS8.sql" />
     <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
+    <Content Include="Store Procedures\inventario\SP_LlenarDGVInventario.sql" />
     <Content Include="Store Procedures\tickets\SP_InsertarTicket.sql" />
     <Content Include="Store Procedures\tickets\SP_ObtenerCategoria.sql" />
     <None Include="Resources\logo.png" />
