--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -432,6 +432,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Database Scripts\Database Script\Script DB_DS8.sql" />
+    <Content Include="Database Scripts\dataset\DATA SET TABLAS MODULO 3.sql" />
+    <Content Include="Database Scripts\dataset\Script ActualizarModulo3.sql" />
     <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
     <Content Include="Store Procedures\tickets\SP_InsertarTicket.sql" />
