--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -436,12 +436,12 @@
     <Content Include="Database Scripts\dataset\Script ActualizarModulo3.sql" />
     <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
+    <Content Include="Store Procedures\Analitica-Reportes\StoredProceduresReportes.sql" />
     <Content Include="Store Procedures\tickets\SP_InsertarTicket.sql" />
     <Content Include="Store Procedures\tickets\SP_ObtenerCategoria.sql" />
     <None Include="Resources\logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Store Procedures\analitica\" />
     <Folder Include="Store Procedures\ayuda\" />
     <Folder Include="Store Procedures\clientes\" />
     <Folder Include="Store Procedures\ventas\" />
