--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -433,7 +433,7 @@
   <ItemGroup>
     <Content Include="Database Scripts\Database Script\Script DB_DS8.sql" />
     <Content Include="Database Scripts\dataset\DATA SET TABLAS MODULO 3.sql" />
-    <Content Include="Database Scripts\dataset\Script ActualizarModulo3.sql" />
+    <Content Include="Database Scripts\Database Script\Script ActualizarModulo3.sql" />
     <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
     <Content Include="Store Procedures\Analitica-Reportes\StoredProceduresReportes.sql" />
