--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -443,6 +443,8 @@
     <Content Include="Database Scripts\Database Script\Script DB_DS8.sql" />
     <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
+    <Content Include="Store Procedures\inventario\SP_ActualizarMarca.sql" />
+    <Content Include="Store Procedures\inventario\SP_InsertarMarca.sql" />
     <Content Include="Store Procedures\inventario\SP_LlenarDGVInventario.sql" />
     <Content Include="Store Procedures\tickets\SP_InsertarTicket.sql" />
     <Content Include="Store Procedures\tickets\SP_ObtenerCategoria.sql" />
