--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -310,7 +310,6 @@
     <Compile Include="Forms Modules\frmsInventario\frmInventario.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Interfaces Modules\analitica\analitycInterfaces.vb" />
     <Compile Include="Interfaces Modules\inventario\inventaryInterfaces.vb" />
     <Compile Include="Interfaces Modules\analitica\analitycClienteInterfaces.vb" />
     <Compile Include="Interfaces Modules\analitica\analitycReporteInterfaces.vb" />
@@ -456,7 +455,7 @@
     <Content Include="Database Scripts\Database Script\Script DB_DS8.sql" />
     <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
-    <Content Include="Store Procedures\inventario\sp_InsertarProducto.sql" />
+    <Content Include="Store Procedures\inventario\SP_InsertarProducto.sql" />
     <Content Include="Store Procedures\inventario\SP_ActualizarMarca.sql" />
     <Content Include="Store Procedures\inventario\SP_InsertarMarca.sql" />
     <Content Include="Store Procedures\inventario\SP_LlenarDGVInventario.sql" />
