--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -436,8 +436,7 @@
     <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
     <Content Include="Store Procedures\Analitica-Reportes\StoredProceduresReportes.sql" />
-    <Content Include="Store Procedures\tickets\SP_InsertarTicket.sql" />
-    <Content Include="Store Procedures\tickets\SP_ObtenerCategoria.sql" />
+    <Content Include="Store Procedures\tickets\StoredProceduresTickets.sql" />
     <None Include="Resources\logo.png" />
   </ItemGroup>
   <ItemGroup>
