--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -262,6 +262,12 @@
     <Compile Include="Forms Modules\frmsClientes\frmClientes.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms Modules\frmsInventario\frmAgregarCategoria.Designer.vb">
+      <DependentUpon>frmAgregarCategoria.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsInventario\frmAgregarCategoria.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms Modules\frmsInventario\frmAgregarMarca.Designer.vb">
       <DependentUpon>frmAgregarMarca.vb</DependentUpon>
     </Compile>
@@ -455,9 +461,6 @@
     <Content Include="Database Scripts\Database Script\Script DB_DS8.sql" />
     <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
-    <Content Include="Store Procedures\inventario\SP_InsertarProducto.sql" />
-    <Content Include="Store Procedures\inventario\SP_ActualizarMarca.sql" />
-    <Content Include="Store Procedures\inventario\SP_InsertarMarca.sql" />
     <Content Include="Store Procedures\inventario\SP_LlenarDGVInventario.sql" />
     <Content Include="Store Procedures\Analitica-Reportes\StoredProceduresReportes.sql" />
     <Content Include="Store Procedures\tickets\SP_InsertarTicket.sql" />
