Listar y Editar usarios, empresas, clientes

--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <Compile Include="Class Modules\analitica\analiticaReporteInventarioDAO.vb" />
     <Compile Include="Class Modules\clientes\Class3.vb" />
+    <Compile Include="Class Modules\clientes\ClientesModule.vb" />
     <Compile Include="Class Modules\inventario\Class4.vb" />
     <Compile Include="Class Modules\tickets\ticketsDAO.vb" />
     <Compile Include="Class Modules\ventas\Class6.vb" />
@@ -256,10 +257,28 @@
     <Compile Include="Forms Modules\frmsAyuda\frmAyudaUsuario.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms Modules\frmsClientes\frmEditarCliente.Designer.vb">
+      <DependentUpon>frmEditarCliente.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsClientes\frmEditarCliente.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms Modules\frmsClientes\frmEditarEmpresa.Designer.vb">
+      <DependentUpon>frmEditarEmpresa.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsClientes\frmEditarEmpresa.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms Modules\frmsClientes\frmClientes.Designer.vb">
       <DependentUpon>frmClientes.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms Modules\frmsClientes\frmClientes.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms Modules\frmsClientes\frmEditarUsuario.Designer.vb">
+      <DependentUpon>frmEditarUsuario.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms Modules\frmsClientes\frmEditarUsuario.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms Modules\frmsTickets\frmCrearTickets.Designer.vb">
@@ -380,8 +399,17 @@
     <EmbeddedResource Include="Forms Modules\frmsAyuda\frmAyudaUsuario.resx">
       <DependentUpon>frmAyudaUsuario.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms Modules\frmsClientes\frmEditarCliente.resx">
+      <DependentUpon>frmEditarCliente.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms Modules\frmsClientes\frmEditarEmpresa.resx">
+      <DependentUpon>frmEditarEmpresa.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsClientes\frmClientes.resx">
       <DependentUpon>frmClientes.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms Modules\frmsClientes\frmEditarUsuario.resx">
+      <DependentUpon>frmEditarUsuario.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsTickets\frmCrearTickets.resx">
       <DependentUpon>frmCrearTickets.vb</DependentUpon>
