carpeta de SP para inventario creada para resolver conflicto

--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -442,6 +442,7 @@
   <ItemGroup>
     <Folder Include="Store Procedures\ayuda\" />
     <Folder Include="Store Procedures\clientes\" />
+    <Folder Include="Store Procedures\inventario\" />
     <Folder Include="Store Procedures\ventas\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
