--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -466,11 +466,6 @@
     <Content Include="Store Procedures\tickets\StoredProceduresTickets.sql" />
     <None Include="Resources\logo.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Store Procedures\ayuda\" />
-    <Folder Include="Store Procedures\clientes\" />
-    <Folder Include="Store Procedures\inventario\" />
-    <Folder Include="Store Procedures\ventas\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
