--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -151,7 +151,6 @@
   <ItemGroup>
     <Compile Include="Class Modules\analitica\analiticaReporteInventarioDAO.vb" />
     <Compile Include="Class Modules\clientes\Class3.vb" />
-    <Compile Include="Class Modules\inventario\inventaryDAO.vb" />
     <Compile Include="Class Modules\clientes\ClientesModule.vb" />
     <Compile Include="Class Modules\inventario\Class4.vb" />
     <Compile Include="Class Modules\tickets\ticketsDAO.vb" />
@@ -276,24 +275,6 @@
     <Compile Include="Forms Modules\frmsClientes\frmClientes.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms Modules\frmsInventario\frmAgregarCategoria.Designer.vb">
-      <DependentUpon>frmAgregarCategoria.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Forms Modules\frmsInventario\frmAgregarCategoria.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms Modules\frmsInventario\frmAgregarMarca.Designer.vb">
-      <DependentUpon>frmAgregarMarca.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Forms Modules\frmsInventario\frmAgregarMarca.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms Modules\frmsInventario\frmAgregarProducto.Designer.vb">
-      <DependentUpon>frmAgregarProducto.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Forms Modules\frmsInventario\frmAgregarProducto.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Forms Modules\frmsClientes\frmEditarUsuario.Designer.vb">
       <DependentUpon>frmEditarUsuario.vb</DependentUpon>
     </Compile>
@@ -336,7 +317,6 @@
     <Compile Include="Forms Modules\frmsInventario\frmInventario.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Interfaces Modules\inventario\inventaryInterfaces.vb" />
     <Compile Include="Interfaces Modules\analitica\analitycClienteInterfaces.vb" />
     <Compile Include="Interfaces Modules\analitica\analitycReporteInterfaces.vb" />
     <Compile Include="Interfaces Modules\tickets\ticketsInterfaces.vb" />
@@ -428,12 +408,6 @@
     <EmbeddedResource Include="Forms Modules\frmsClientes\frmClientes.resx">
       <DependentUpon>frmClientes.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms Modules\frmsInventario\frmAgregarMarca.resx">
-      <DependentUpon>frmAgregarMarca.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms Modules\frmsInventario\frmAgregarProducto.resx">
-      <DependentUpon>frmAgregarProducto.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsClientes\frmEditarUsuario.resx">
       <DependentUpon>frmEditarUsuario.vb</DependentUpon>
     </EmbeddedResource>
@@ -454,7 +428,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms Modules\frmsInventario\frmInventario.resx">
       <DependentUpon>frmInventario.vb</DependentUpon>
-      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -491,15 +464,14 @@
     <Content Include="Database Scripts\dataset\ScriptDataSet.sql" />
     <Content Include="Resources\dataConfig.xml" />
     <Content Include="Store Procedures\Analitica-Reportes\StoredProceduresReportes.sql" />
-    <Content Include="Store Procedures\inventario\SP_Marcas.sql" />
-    <Content Include="Store Procedures\inventario\SP_Categorias.sql" />
-    <Content Include="Store Procedures\inventario\SP_Productos.sql" />
-    <Content Include="Store Procedures\Analitica-Reportes\StoredProceduresReportes.sql" />
-    <Content Include="Store Procedures\tickets\SP_InsertarTicket.sql" />
-    <Content Include="Store Procedures\tickets\SP_ObtenerCategoria.sql" />
     <Content Include="Store Procedures\tickets\StoredProceduresTickets.sql" />
     <None Include="Resources\logo.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Store Procedures\ayuda\" />
+    <Folder Include="Store Procedures\clientes\" />
+    <Folder Include="Store Procedures\inventario\" />
+    <Folder Include="Store Procedures\ventas\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
