--- a/x-project-desktop.vbproj
+++ b/x-project-desktop.vbproj
@@ -490,9 +490,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Class Modules\inventario\" />
-    <Folder Include="Class Modules\ventas\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
